Задача 4 заработало
