# src/main/java/com/example/dto/UserUpdateRequest.java
@@ -1,31 +1,0 @@
-package com.example.dto;
-
-import jakarta.validation.constraints.Email;
-import jakarta.validation.constraints.Max;
-import jakarta.validation.constraints.Min;
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Size;
-import lombok.Getter;
-import lombok.Setter;
-
-@Getter
-@Setter
-public class UserUpdateRequest {
-
-    @NotNull(message = "ID обязателен для обновления")
-    private Long id;
-
-    @NotNull
-    @Size(min = 2, max = 50)
-    private String name;
-
-    @Email
-    @NotBlank
-    private String email;
-
-    @NotNull
-    @Min(1)
-    @Max(150)
-    private Integer age;
-}
