# src/main/resources/openapi.yaml
@@ -5,6 +5,7 @@ info:
 paths:
   /users:
     get:
+      operationId: getAllUsers
       summary: Получить всех пользователей
       description: Возвращает список всех пользователей.
       tags:
@@ -17,8 +18,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/UserResponse2'
+                  $ref: '#/components/schemas/UserResponse'
     post:
+      operationId: createUser
       summary: Создать нового пользователя
       description: Создает нового пользователя с переданными данными.
       tags:
@@ -28,7 +30,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserCreateRequest2'
+              $ref: '#/components/schemas/UserCreateRequest'
       responses:
         '201':
           description: Пользователь успешно создан.
@@ -37,6 +39,7 @@ paths:
 
   /users/{id}:
     get:
+      operationId: getUser
       summary: Получить информацию о пользователе по ID
       description: Возвращает информацию о пользователе с указанным ID.
       tags:
@@ -47,6 +50,7 @@ paths:
           required: true
           schema:
             type: integer
+            format: int64
           description: Идентификатор пользователя.
       responses:
         '200':
@@ -54,10 +58,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserResponse2'
+                $ref: '#/components/schemas/UserResponse'
         '404':
           description: Пользователь не найден.
     put:
+      operationId: updateUser
       summary: Обновить информацию о пользователе
       description: Обновляет информацию о пользователе с указанным ID.
       tags:
@@ -68,13 +73,14 @@ paths:
           required: true
           schema:
             type: integer
+            format: int64
           description: Идентификатор пользователя.
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserUpdateRequest2'
+              $ref: '#/components/schemas/UserUpdateRequest'
       responses:
         '200':
           description: Пользователь успешно обновлен.
@@ -83,6 +89,7 @@ paths:
         '404':
           description: Пользователь не найден.
     delete:
+      operationId: deleteUser
       summary: Удалить пользователя
       description: Удаляет пользователя по указанному ID.
       tags:
@@ -93,6 +100,7 @@ paths:
           required: true
           schema:
             type: integer
+            format: int64
           description: Идентификатор пользователя.
       responses:
         '204':
@@ -102,7 +110,7 @@ paths:
 
 components:
   schemas:
-    UserCreateRequest2:
+    UserCreateRequest:
       type: object
       required:
         - name
@@ -124,12 +132,16 @@ components:
           minimum: 1
           maximum: 150
 
-    UserUpdateRequest2:
+    UserUpdateRequest:
       type: object
       required:
         - name
         - email
       properties:
+        id:
+          type: integer
+          format: int64
+          description: Уникальный идентификатор пользователя.
         name:
           type: string
           description: Имя пользователя.
@@ -145,11 +157,12 @@ components:
           minimum: 1
           maximum: 150
 
-    UserResponse2:
+    UserResponse:
       type: object
       properties:
         id:
           type: integer
+          format: int64
           description: Уникальный идентификатор пользователя.
         name:
           type: string
